--- a/nmf_makine_ogrenmesi.ipynb
+++ b/nmf_makine_ogrenmesi.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"bnn.csv\")\n",
+    "df = pd.read_csv(\"data.csv\")\n",
     "\n",
     "X = np.array(df[\"Görüş\"].values.astype('U')) \n",
     "df[\"Durum\"].replace({\"Olumlu\": 1, \"Olumsuz\": 0}, inplace=True)\n",
